feat: deploy时先删除旧目录

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,4 +34,5 @@ deploy-job:
   stage: deploy
   script:
     - apt update && apt install sshpass -y
-    - sshpass -p $PASSWORD scp -o StrictHostKeyChecking=no -r ./dist $CUSTOM_USERNAME@$CUSTOM_IP:$CUSTOM_DEPLOY_PATH
+    - sshpass -p $PASSWORD ssh $CUSTOM_USERNAME@$CUSTOM_IP "rm -rf /var/www/html/static/sdudoc || echo dir not exists"
+    - sshpass -p $PASSWORD scp -o StrictHostKeyChecking=no -r ./dist $CUSTOM_USERNAME@$CUSTOM_IP:/var/www/html/static/sdudoc
