--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,9 +19,9 @@
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 env:
   WEBAPP_NAME: 'umi-template'          # set this to your application's name
@@ -37,7 +37,6 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
 
     - name: npm install, lint and build
       run: |
