--- a/package.json
+++ b/package.json
@@ -1,41 +1,32 @@
 {
-  "name": "umi-template",
   "private": true,
+  "author": "",
   "scripts": {
-    "start": "umi dev",
-    "lint": "eslint",
     "build": "umi build",
-    "postinstall": "umi generate tmp",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage",
-    "rapper": "rapper --type normal --rapperPath \"src/services\" --apiUrl \"http://rap2api.taobao.org/repository/get?id=302425&token=9R9z6QerB2pJBOy_iCk_-li78WEChbnM\" --rapUrl \"http://rap2.taobao.org\""
-  },
-  "gitHooks": {
-    "pre-commit": "eslint"
+    "dev": "umi dev",
+    "postinstall": "umi setup",
+    "lint": "eslint .",
+    "setup": "umi setup",
+    "start": "npm run dev"
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
+    "@ant-design/icons": "^5.0.1",
+    "@umijs/plugins": "^4.0.53",
+    "antd": "^5.2.2",
     "crypto-js": "^4.1.1",
-    "mobx": "^6.5.0",
-    "mobx-react": "^7.4.0",
-    "rap": "^1.3.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "umi": "^3.5.23"
+    "mobx": "^6.8.0",
+    "mobx-react": "^7.6.0",
+    "umi": "^4.0.53"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "@umijs/preset-react": "^1.0.0",
-    "@umijs/test": "^3.5.23",
-    "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "eslint": "^8.35.0",
+    "prettier": "^2",
+    "prettier-plugin-organize-imports": "^2",
+    "prettier-plugin-packagejson": "^2",
+    "tslib": "^2.5.0",
+    "typescript": "^4"
   }
 }
